# fractals

./: .gitignore  .gitmodules  CMakeLists.txt
apps/: CMakeLists.txt
apps/2d-mandelbrot/: CMakeLists.txt  main.cpp
apps/3d-mandelbrot/: CMakeLists.txt  main.cpp
include/fractals-2d/: fractals_2d.h
include/fractals-3d/: fractals_3d.h
sources/: CMakeLists.txt
sources/fractals/: CMakeLists.txt  fractals.cpp
sources/fractals-2d/: CMakeLists.txt  fractals_2d.cpp
sources/fractals-3d/: CMakeLists.txt  fractals_3d.cpp
tests/: CMakeLists.txt  main.cpp
